--- a/Week_1.ipynb
+++ b/Week_1.ipynb
@@ -209,6 +209,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strings are lists in python!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -518,6 +525,13 @@
     "for n in n_space:\n",
     "    delta_x = 0.1**n\n",
     "    print(delta_x, complex_derivative(np.sin, np.pi/4, delta_x), np.sqrt(1/2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Going into the complex plane can often lead to surprising solutions! This notebook was inspired by this SIAM new article (https://sinews.siam.org/Details-Page/differentiation-without-a-difference)"
    ]
   },
   {
