--- a/Week_2.ipynb
+++ b/Week_2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Taylor Series and the Euler Method "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -136,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###The Euler Method ###\n",
+    "### The Euler Method \n",
     "\n",
     "You would usually have to solve the following differential equation through a variety of tricks like separation of variables., integrating factors, power series etc.\n",
     "\n",
